--- a/scss/layouts/_lo-hero.scss
+++ b/scss/layouts/_lo-hero.scss
@@ -77,6 +77,7 @@
             top: 0;
             opacity: 0.25;
             z-index: -1;
+            animation:  flickerAnimation 2s infinite;
         }
         &::after {
             content: url("../images/hero-section/shapes/shape-bg2.svg");
@@ -85,6 +86,7 @@
             bottom: -262px;
             opacity: 0.25;
             z-index: -1;
+            animation:  flickerAnimation2 2s infinite;
         }
     }
 
@@ -205,8 +207,12 @@
         padding-top: 265px;
         padding-bottom: 147px;
         &::before {
-            content: url("../images/hero-section/BG-home-4.jpg");
+            content: "";
             position: absolute;
+            background-image: url("../images/hero-section/BG-home-4.jpg");
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
             left: 0;
             right: 0;
             top: 0;
@@ -339,3 +345,9 @@
         }
     }
 }
+
+
+
+
+
+
