--- a/scss/layouts/_lo-404.scss
+++ b/scss/layouts/_lo-404.scss
@@ -60,7 +60,7 @@
                 border-radius: 500px;
                 border: 1px solid transparent;
                 &:hover {
-                    color: $color-title;
+                    background-color: $color-white;
                 }
             }
         }
