--- a/scss/components/_cp-forum-login-form.scss
+++ b/scss/components/_cp-forum-login-form.scss
@@ -49,7 +49,7 @@
                 &:hover {
                     background-color: $color-white;
                     &::before {
-                        background-color: #0289FF;
+                        // background-color: #0289FF;
                     }
                 }
             }
