--- a/scss/layouts/_lo-faq.scss
+++ b/scss/layouts/_lo-faq.scss
@@ -12,7 +12,7 @@
         background: $color-white;
         box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.04);
         border-radius: 10px;
-        padding: 45px;
+        padding: 65px 50px;
         .nav {
             .nav-link {
                 background: transparent;
@@ -23,7 +23,7 @@
                 color: #1D2746;
                 text-align: left;
                 border-bottom: 1px solid#EBEBEB;
-                padding: 17px 0;
+                padding: 20px 0;
                 border-radius: 0;
                 position: relative;
                 @include transition;
