--- a/scss/abstracts/_custom-animation.scss
+++ b/scss/abstracts/_custom-animation.scss
@@ -53,3 +53,26 @@
      -o-animation: flickerAnimation 2s infinite;
       animation: flickerAnimation 2s infinite;
 }
+
+//flicker3
+
+@keyframes flickerAnimation3 {
+    0%   { opacity:0; }
+    50%  { opacity:1; }
+    100% { opacity:0; }
+}
+
+.animate-flicker3 {
+     animation: flickerAnimation 2s infinite;
+}
+
+//flicker4
+@keyframes flickerAnimation4 {
+    0%   { opacity:1; }
+    50%  { opacity:0; }
+    100% { opacity:1; }
+}
+
+.animate-flicker4 {
+     animation: flickerAnimation 2s infinite;
+}
