--- a/scss/components/_cp-community-post.scss
+++ b/scss/components/_cp-community-post.scss
@@ -9,14 +9,20 @@
     }
     &:hover {
         background: $color-white;
+        @include transition;
         .title-content {
             .icon {
-                background: #fa7575;
+                // background: #fa7575;
                 svg {
                     path {
                         stroke: white;
                         @include transition;
                     }
+                }
+                &::before {
+                    width: 100%;
+                    height: 100%;
+                    z-index: -1;
                 }
             }
         }
@@ -29,6 +35,20 @@
             height: 70px;
             background: #FFF2F2;
             @include transition;
+            position: relative;
+            overflow: hidden;
+            z-index: 0;
+            &::before {
+                content: "";
+                position: absolute;
+                height: 0;
+                width: 0;
+                bottom: 0;
+                background: #fc6464;
+                border-radius: 50px;
+                @include transition;
+            }
+
         }
         .title-area {
             flex: 1;
