--- a/scss/components/_cp-counter.scss
+++ b/scss/components/_cp-counter.scss
@@ -26,7 +26,7 @@
     &--style-1 {
         width: 240px;
         height: 140px;
-        @include transition;
+        transition: all 0.3s ease-in-out;
         &:hover {
             box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.25);
             transform: translateY(-10px);
