--- a/scss/components/_cp-rt-card.scss
+++ b/scss/components/_cp-rt-card.scss
@@ -60,6 +60,13 @@
 
     &--style-1 {
         padding: 53px 45px;
+        .card-title {
+            a {
+                &:hover {
+                    color: $color-secondary;
+                }
+            }
+        }
         .icon {
             width: 80px;
             height: 80px;
@@ -70,7 +77,7 @@
             // box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 0px;
             @include transition;
             .icon {
-                transition: all 0.5s ease-in-out;
+                transition: all 0.3s ease-in-out;
                 border-radius: 40px 0 40px 40px;
                 svg {
                     animation: fadeInUp 0.7s forwards;
@@ -91,6 +98,13 @@
         padding: 55px 32px;
         background: #F8F8F8;
         @include transition;
+        .card-title {
+            a {
+                &:hover {
+                    color: $color-secondary;
+                }
+            }
+        }
         .icon {
             width: 60px;
             height: 60px;
@@ -116,15 +130,11 @@
         &:hover {
             box-shadow: 20px 20px 25px rgba(0, 0, 0, 0.2);
             .icon {
+                transition: all 0.3s ease-in-out;
                 border-radius: 40px 0 40px 40px;
-                @include transition;
-                // position: unset;
-                // box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
-                // &::before {
-                //     height: 200%;
-                //     width: 200%;
-                //     transition: 0.8s ease-in-out;
-                // }
+                svg {
+                    animation: fadeInUp 0.7s forwards;
+                }
             }
             .card-title {
                 // a {
@@ -202,6 +212,15 @@
             @include transition;
             width: 35px;
             height: 35px;
+
+            &:hover {
+                background: $color-shade24;
+                border: 1px solid transparent;
+                svg {
+                    fill: $color-white;
+                    @include transition;
+                }
+            }
             
         }
         .card-title {
@@ -225,16 +244,9 @@
             border: 1px solid #fab6eb;
             background: $color-white;
             .icon {
-                animation: bounce 1s forwards;
+                animation: fadeInDown 1s forwards;
             }
-            .card-btn {
-                background: $color-shade24;
-                border: 1px solid transparent;
-                svg {
-                    fill: $color-white;
-                    @include transition;
-                }
-            }
+            
         }
     }
     &--style-5 {
@@ -265,7 +277,8 @@
                 font-size: 30px;
                 line-height: 45px;
                 &:hover {
-                    color: $color-shade25;
+                    // color: $color-shade25;
+                    cursor: unset;
                 }
             }
             line-height: 45px;
@@ -279,12 +292,17 @@
             font-size: 16px;
             line-height: 45px;
             color: #2266EA;
+            &:hover {
+                color: #F8851C;
+            }
         }
 
         &:hover {
             box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.1);
             .icon {
-                animation: rubberBand 1s forwards;
+                img {
+                    animation: fadeInUp 1s forwards;
+                }
             }
         }
     }
@@ -295,7 +313,9 @@
         padding: 50px 40px;
         &:hover {
             .icon {
-                animation: jello 1s forwards;
+                img {
+                    animation: fadeInUp 1s forwards;
+                }
             }
         }
         .card-title {
@@ -330,13 +350,19 @@
         padding: 47px 53px;
         &:hover {
             .icon {
-                animation: backInDown 0.8s forwards;
+                svg {
+                    animation: fadeInUp 1s forwards;
+                }
             }
         }
         .card-title {
             margin-bottom: 16px;
             a {
                 color: $color-white;
+                &:hover {
+                    color: $color-white;
+                    cursor: unset;
+                }
             }
         }
         .card-info {
@@ -369,7 +395,8 @@
                 font-weight: 500;
                 font-size: 30px;
                 &:hover {
-                    color: $color-shade25;
+                    // color: $color-shade25;
+                    cursor: unset;
                 }
             }
             .icon {
@@ -402,7 +429,9 @@
             box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
             background-color: $color-white;
             .icon {
-                animation: flip 0.8s forwards;
+                svg {
+                    animation: fadeInUp 1s forwards;
+                }
             }
         }
     }
