--- a/scss/layouts/_lo-best-online-doc.scss
+++ b/scss/layouts/_lo-best-online-doc.scss
@@ -231,7 +231,8 @@
                             line-height: 19px;
                             border: 1px solid transparent;
                             &:hover {
-                                color: $color-title;
+                                
+                                color: $color-white;
                             }
                         }
                     }
