--- a/scss/layouts/_lo-call-to-action.scss
+++ b/scss/layouts/_lo-call-to-action.scss
@@ -116,7 +116,7 @@
             }
             .call-to-action-btn {
                 border: none;
-                background: #2E9BFF;
+                background-color: #2E9BFF;
                 border-radius: 10px;
                 font-family: $font-roboto;
                 font-weight: 500;
@@ -124,6 +124,12 @@
                 line-height: 18px;
                 color: $color-white;
                 padding: 16px;
+                &:hover {
+                   color: $color-title;
+                   &::before {
+                        background-color: $color-white;
+                   }
+                }
             }
         }
     }
@@ -158,6 +164,32 @@
                 line-height: 18px;
                 color: $color-white;
                 padding: 12px 24px;
+                position: relative;
+                overflow: hidden;
+                z-index: 0;
+                &::before {
+                    content: "";
+                    position: absolute;
+                    background: #0059a7;
+                    width: 100%;
+                    height: 100%;
+                    transition: all 0.3s ease-in-out;
+                    bottom: 0;
+                    visibility: hidden;
+                    opacity: 0;
+                    z-index: -1;
+                    left: 0;
+                    bottom: -100%;
+                }
+                &:hover {
+                    background: #0059a7;
+                    transition: all 0.8s ease-in-out;
+                    &:before {
+                        visibility: visible;
+                        opacity: 1;
+                        bottom: 0;
+                    }
+                }
             }
         }
     }
@@ -193,6 +225,30 @@
                 color: #1A1A1A;
                 padding: 12px 24px;
                 border-radius: 0;
+                overflow: hidden;
+                &::before {
+                    content: "";
+                    position: absolute;
+                    background: #1D8FFA;
+                    width: 100%;
+                    height: 100%;
+                    transition: all 0.3s ease-in-out;
+                    top: 0;
+                    visibility: hidden;
+                    opacity: 0;
+                    z-index: -1;
+                    left: -100%;
+                }
+                &:hover {
+                    background: #8d47fd;
+                    @include transition;
+                    color: $color-white;
+                    &:before {
+                        visibility: visible;
+                        opacity: 1;
+                        left: -1px;
+                    }
+                }
             }
         }
     }
