--- a/scss/layouts/_lo-elements.scss
+++ b/scss/layouts/_lo-elements.scss
@@ -159,7 +159,7 @@
                                 span {
                                     background: #FFFFFF;
                                     border-radius: 50%;
-                                    padding: 8px 13px 9px 13px;
+                                    padding: 6px 11px 6px 11px;
                                     margin: 3px 5px;
     
                                     font-family: $font-roboto;
@@ -206,7 +206,7 @@
                         gap: 24px;
                         .rt-card {
                             background: #FFFFFF;
-                            box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.07);
+                            box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.04);
                             padding: 44px 20px;
                             width: 306px;
                             height: 300px;
@@ -248,6 +248,14 @@
                             &:nth-child(4) {
                                 .icon {
                                     background: #FF2F46;;
+                                }
+                            }
+                            &:hover {
+                                .icon {
+                                    transform: scale(1.10);
+                                    svg {
+                                        animation: fadeInUp 0.4s forwards;
+                                    }
                                 }
                             }
                         }
@@ -315,7 +323,7 @@
             margin-bottom: 80px;
             border-bottom: 1px solid #D7D7D7;
             .accordion-area {
-                padding-bottom: 30px;
+                padding-bottom: 50px;
                 .title-area {
                     margin-bottom: 35px;
                     .title {
@@ -379,6 +387,11 @@
                         @extend .text;
                         font-weight: 500;
                         color: #15C590;
+                    }
+
+                    &:hover {
+                        @include transition;
+                        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
                     }
                 }
             }
@@ -463,11 +476,17 @@
             margin-bottom: 47px;
             .table-area {
                 .table {
-                    background: #D9D9D9;
-                    border-radius: 10px;
-                    padding: 10px;
-                    img {
-                        width: 100%;
+                    // background: #D9D9D9;
+                    // border-radius: 10px;
+                    // padding: 10px;
+                    // img {
+                    //     width: 100%;
+                    // }
+                    margin-bottom: 25px;
+                    tr {
+                        // &:hover {
+                        //     background-color: #acf1ff;
+                        // }
                     }
                 }
                 .title-area {
@@ -770,12 +789,13 @@
                             h4 {
                                 color: #6C62CA;
                                 font-family: $font-roboto;
-                                font-size: 16px;
+                                font-size: 15px;
+                                margin-bottom: 5px;
                             }  
                             .para-text {
                                 color: $color-title;
-                                font-size: 10px;
-                                line-height: 12px;
+                                font-size: 14px;
+                                line-height: 16px;
                             }
                         }
                     }
