--- a/scss/layouts/_lo-footer.scss
+++ b/scss/layouts/_lo-footer.scss
@@ -39,8 +39,8 @@
                                 
                                 position: absolute;
                                 width: 100%;
-                                height: 2px;
-                                background: $color-shade25;
+                                height: 1px;
+                                background: $color-title;
                                 left: 0;
                                 pointer-events: none;
                             }
@@ -48,6 +48,7 @@
                             // }
 
                             &:hover {
+                                color: $color-black;
                                 &::before {
                                     transform-origin: 0% 50%;
                                     transform: scale3d(1, 1, 1);
@@ -134,6 +135,12 @@
                             a {
                                 color: #C1C5D1;
                                 font-weight: 300;
+                                &::before {
+                                    background: $color-white;
+                                }
+                                &:hover {
+                                    color: $color-white;
+                                }
                             }
                         } 
                     }
