--- a/scss/components/_cp-community-post.scss
+++ b/scss/components/_cp-community-post.scss
@@ -57,7 +57,7 @@
                 .title-link {
                     font-family: $font-roboto;
                     font-weight: 500;
-                    font-size: 20px;
+                    @include toRem(font-size, 20);
                     line-height: 23px;
                     color: $color-title;
                     &:hover {
