--- a/scss/components/_cp-comment.scss
+++ b/scss/components/_cp-comment.scss
@@ -40,7 +40,7 @@
                         span {
                             font-family: $font-roboto;
                             font-weight: 400;
-                            font-size: 15px;
+                            @include toRem(font-size, 15);
                             line-height: 18px;
                             color: #6B707F;
                         }
@@ -49,7 +49,7 @@
                         p {
                             font-family: 'Hind';
                             font-weight: 400;
-                            font-size: 16px;
+                            @include toRem(font-size, 16);
                             line-height: 26px;
                             color: #4F536C;
                         }
@@ -59,7 +59,7 @@
                 .reply-btn {
                     font-family: $color-title;
                     font-weight: 400;
-                    font-size: 16px;
+                    @include toRem(font-size, 16);
                     line-height: 30px;
                     color: $color-title;
                     gap: 7px;
