--- a/scss/components/_cp-contact-form.scss
+++ b/scss/components/_cp-contact-form.scss
@@ -9,7 +9,7 @@
 
             font-family: $font-roboto;
             font-weight: 400;
-            font-size: 16px;
+            @include toRem(font-size, 16);
             line-height: 19px;
             color: #8F8F8F;
             &::placeholder {
@@ -20,7 +20,7 @@
     button {
         font-family: $font-roboto;
         font-weight: 600;
-        font-size: 18px;
+        @include toRem(font-size, 18);
         line-height: 21px;
         background: #15C590;
         color: $color-white;
