--- a/scss/components/_cp-explore-topics.scss
+++ b/scss/components/_cp-explore-topics.scss
@@ -19,16 +19,16 @@
                 a {
                     font-family: $font-roboto;
                     font-weight: 500;
-                    font-size: 22px;
+                    @include toRem(font-size, 22);
                     line-height: 26px;
                     color: $color-title;
                 }
             }
         }
         .number-of-article {
-            font-family: 'Roboto';
+            font-family: $font-roboto;
             font-weight: 400;
-            font-size: 15px;
+            @include toRem(font-size, 15);
             line-height: 18px;
             color: #777777;
         }
@@ -40,7 +40,7 @@
             li {
                 font-family: $font-roboto;
                 font-weight: 400;
-                font-size: 16px;
+                @include toRem(font-size, 16);
                 line-height: 19px;
                 color: #6B707F;
                 margin-bottom: 30px;
@@ -68,14 +68,14 @@
         }
     }
     .view-all-btn {
-        border: 1px solid #1D2746;
+        border: 1px solid $color-title;
         border-radius: 100px;
         padding: 8px 20px 8px 20px;
-        font-family: 'Roboto';
+        font-family: $font-roboto;
         font-weight: 500;
-        font-size: 15px;
+        @include toRem(font-size, 15);
         line-height: 18px;
-        color: #1D2746;
+        color: $color-title;
         &:hover {
             border: 1px solid transparent;
             background-color: $color-secondary;
