--- a/scss/components/_cp-forum-login-form.scss
+++ b/scss/components/_cp-forum-login-form.scss
@@ -39,7 +39,7 @@
             a {
                 font-family: $font-roboto;
                 font-weight: 600;
-                font-size: 16px;
+                @include toRem(font-size, 16);
                 line-height: 19px;
                 color: $color-white;
                 padding: 15px 32px;
@@ -62,7 +62,7 @@
         .title {
             font-family: $font-roboto;
             font-weight: 600;
-            font-size: 30px;
+            @include toRem(font-size, 30);
             line-height: 45px;
             color: $color-title;
             margin-bottom: 25px;
@@ -92,7 +92,7 @@
             }
             .form-btn {
                 a {
-                    background: #15C590;
+                    background: $color-secondary;
                     border-radius: 10px;
                     &:hover {
                         background-color: #08815d;
