--- a/scss/components/_cp-forum-table.scss
+++ b/scss/components/_cp-forum-table.scss
@@ -22,11 +22,11 @@
                     border-top: 2px solid #0289FF;
                     border-bottom: 1px solid #F4F4F4;
     
-                    font-family: 'Roboto';
+                    font-family: $font-roboto;
                     font-weight: 500;
-                    font-size: 18px;
+                    @include toRem(font-size, 18);
                     line-height: 21px;
-                    color: #1D2746;
+                    color: $color-title;
                     &:first-child {
                         padding: 10px 15px 10px 50px;
                     }
@@ -41,9 +41,9 @@
                         margin-bottom: 6px;
                         // background: $color-white;
                         .post-title {
-                            font-family: 'Roboto';
+                            font-family: $font-roboto;
                             font-weight: 500;
-                            font-size: 16px;
+                            @include toRem(font-size, 16);
                             line-height: 19px;
                         }
                         
@@ -54,43 +54,43 @@
                             .post-author {
                                 gap: 5px;
                                 .name {
-                                    font-family: 'Roboto';
+                                    font-family: $font-roboto;
                                     font-weight: 400;
-                                    font-size: 12px;
+                                    @include toRem(font-size, 12);
                                     line-height: 14px;
-                                    color: #1D2746;
+                                    color: $color-title;
                                 }
                             }
                             span {
-                                font-family: 'Roboto';
+                                font-family: $font-roboto;
                                 font-weight: 400;
-                                font-size: 12px;
+                                @include toRem(font-size, 12);
                                 line-height: 14px;
-                                color: #1D2746;
+                                color: $color-title;
                             }
                             .tag {
                                 background: #F2F9FF;
                                 border-radius: 2px;
                                 padding: 4px;
-                                font-family: 'Roboto';
+                                font-family: $font-roboto;
                                 font-weight: 400;
-                                font-size: 10px;
+                                @include toRem(font-size, 10);
                                 line-height: 12px;
                                 color: #0289FF;
                             }
                         }
                     }
                     .count {
-                        font-family: 'Roboto';
+                        font-family: $font-roboto;
                         font-weight: 400;
-                        font-size: 15px;
+                        @include toRem(font-size, 15);
                         line-height: 18px;
-                        color: #1D2746;
+                        color: $color-title;
                     }
                     .last-post {
-                        font-family: 'Roboto';
+                        font-family: $font-roboto;
                         font-weight: 400;
-                        font-size: 12px;
+                        @include toRem(font-size, 12);
                         line-height: 14px;
                         color: #4E4F50;
                         margin-bottom: 9px
