--- a/scss/components/_cp-isotope-menu.scss
+++ b/scss/components/_cp-isotope-menu.scss
@@ -4,9 +4,9 @@
         gap: 10px;
         li {
             // background: linear-gradient(180deg, #FFFFFF 0%, #EFEFEF 100%);
-            font-family: 'Roboto';
+            font-family: $font-roboto;
             font-weight: 400;
-            font-size: 16px;
+            @include toRem(font-size, 16);
             line-height: 19px;
             
             border-radius: 100px;
