--- a/scss/components/_cp-rt-card.scss
+++ b/scss/components/_cp-rt-card.scss
@@ -23,7 +23,7 @@
         a {
             font-family: $font-roboto;
             font-weight: 600;
-            font-size: 24px;
+            @include toRem(font-size, 24);
             color: $color-title;
             @include transition;
             &:hover {
@@ -35,7 +35,7 @@
     .card-info {
         font-family: $font-roboto;
         font-weight: 400;
-        font-size: 16px;
+        @include toRem(font-size, 16);
         line-height: 26px;
         color: #6B707F;
         margin-bottom: 24px;
@@ -44,10 +44,10 @@
     .card-btn {
         font-family: $font-roboto;
         font-weight: 500;
-        font-size: 15px;
+        @include toRem(font-size, 15);
         line-height: 26px;
         color: #1D2746;
-        border: 1px solid #1D2746;
+        border: 1px solid $title-font;
         border-radius: 100px;
         padding: 6px 21px;
         @include transition;
@@ -115,7 +115,7 @@
             margin-bottom: 10px;
             a {
                 font-weight: 500;
-                font-size: 22px;
+                @include toRem(font-size, 22);
                 // &:hover {
                 //     color: yellow;
                 // }
@@ -171,7 +171,7 @@
             margin-bottom: 5px;
             a {
                 font-weight: 500;
-                font-size: 22px;
+                @include toRem(font-size, 22);
                 &:hover {
                     color: $color-secondary;
                 }
@@ -227,7 +227,7 @@
             margin-bottom: 10px;
             a {
                 font-weight: 600;
-                font-size: 21px;
+                @include toRem(font-size, 21);
                 &:hover {
                     color: $color-shade25;
                 }
@@ -274,7 +274,7 @@
             margin-bottom: 15px;
             a {
                 font-weight: 700;
-                font-size: 30px;
+                @include toRem(font-size, 30);
                 line-height: 45px;
                 &:hover {
                     // color: $color-shade25;
@@ -287,9 +287,9 @@
             margin-bottom: 17px;
         }
         .text-link {
-            font-family: 'Roboto';
+            font-family: $font-roboto;
             font-weight: 500;
-            font-size: 16px;
+            @include toRem(font-size, 16);
             line-height: 45px;
             color: #2266EA;
             &:hover {
@@ -372,9 +372,9 @@
         .card-btn {
             border: none;
             text-decoration: underline;
-            color: #FFFFFF;
+            color: $color-white;
             padding: 0;
-            font-size: 18px;
+            @include toRem(font-size, 18);
             line-height: 30px;
             &:hover {
                 color: $color-title;
@@ -393,7 +393,7 @@
             line-height: 35px;
             a {
                 font-weight: 500;
-                font-size: 30px;
+                @include toRem(font-size, 30);
                 &:hover {
                     // color: $color-shade25;
                     cursor: unset;
@@ -411,7 +411,7 @@
             border: none;
             color: $color-title;
             padding: 0;
-            font-size: 18px;
+            @include toRem(font-size, 18);
             line-height: 30px;
             gap: 10px;
             &:hover {
