--- a/scss/components/_cp-sidebar-nav.scss
+++ b/scss/components/_cp-sidebar-nav.scss
@@ -1,7 +1,10 @@
 .stickyx {
     position: -webkit-sticky;
     position: sticky;
-    top: 115px;
+    top: 15px;
+    @include media-only ('md', min) {
+        top: 115px;
+    }
 }
 .single-element-section {
     overflow: unset;
@@ -22,7 +25,7 @@
                     gap: 5px;
                     font-family: $font-roboto;
                     font-weight: 500;
-                    font-size: 19px;
+                    @include toRem(font-size, 19);
                     line-height: 23px;
                     color: $color-title;
                     padding: 10px 20px;
@@ -64,7 +67,7 @@
                         .nav-link { 
                             font-family: $font-roboto;
                             font-weight: 500;
-                            font-size: 15px;
+                            @include toRem(font-size, 15);
                             line-height: 50px;
                             color: #6B707F;
                             padding: 0 0 0 0;
