--- a/scss/layouts/_lo-elements.scss
+++ b/scss/layouts/_lo-elements.scss
@@ -476,17 +476,9 @@
             margin-bottom: 47px;
             .table-area {
                 .table {
-                    // background: #D9D9D9;
-                    // border-radius: 10px;
-                    // padding: 10px;
-                    // img {
-                    //     width: 100%;
-                    // }
                     margin-bottom: 25px;
-                    tr {
-                        // &:hover {
-                        //     background-color: #acf1ff;
-                        // }
+                    .para-text {
+                        color: unset;
                     }
                 }
                 .title-area {
