--- a/scss/components/_cp-sidebar-nav.scss
+++ b/scss/components/_cp-sidebar-nav.scss
@@ -9,11 +9,13 @@
 .single-element-section {
     overflow: unset;
 }
+
 .sidebar-nav {
     background: #FFFFFF;
     box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.05);
     border-radius: 5px;
     padding: 30px;
+    margin-bottom: 40px;
     nav {
         ul.parent-item-list {
             .nav-item {
