--- a/scss/layouts/_lo-testimonial.scss
+++ b/scss/layouts/_lo-testimonial.scss
@@ -7,23 +7,32 @@
     }
     &--style-2 {
         margin-top: 70px;
-        padding-top: 100px;
-        padding-bottom: 100px;
+        padding-top: 50px;
+        padding-bottom: 50px;
         background: #fafafa;
+        @include media-only('md', min) {
+            padding: 0;
+        }
         @include media-from-to(1200px, min, 1400px, max) {
             padding-top: 50px;
         }
         @include media-only('lg', min) {
             padding-bottom: 0;
+            padding-top: 100px;
         }
         .testimonial-item {
             // margin-bottom: 170px;
-            margin-top: 25px;
-            @include media-from-to(1200px, min, 1400px, max) {
-                padding: 50px 65px;
-            }
+            // margin-top: 25px;
+            @include media-only ('md', min) {
+                padding: 35px;
+                margin: 50px 0;
+            } 
             @include media-only ('lg', min) {
                 margin-top: 30px;
+                padding: 69px 85px;
+            }
+            @include media-from-to(1200px, min, 1400px, max) {
+                padding: 50px 65px;
             }
         }
         .testimonial-img-area {
@@ -31,13 +40,22 @@
             z-index: 1;
             // padding-top: 60px;
             img {
-                // max-width: unset;
+                height: 100%;
+                @include media-only ('md', min) {
+                   height: 505px;
+                }
+                @include media-only(1200px, min) {
+                    height: 580px;
+                }
+                @include media-only(1400px, min) {
+                    height: 662px;
+                }
             }
             &::before {
                 content: "";
                 position: absolute;
-                width: 560px;
-                height: 560px;
+                // width: 560px;
+                // height: 560px;
                 background: #FFE7E7;
                 border-radius: 50%;
                 z-index: -1;
@@ -46,11 +64,13 @@
                 left: 0;
                 right: 0;
                 bottom: -110px;
-                display: none;
+                // display: none;
                 @include transition;
-                @include media-from-to(1200px, min, 1400px, max) {
-                    width: 460px;
-                    height: 460px;
+                width: 460px;
+                height: 460px;
+                @include media-only(1200px, min) {
+                    width: 560px;
+                    height: 560px;
                 }
 
                 @include media-only("lg", min) {
